# avm-public-e2e-20260625-181626

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  pyproject.toml  test_app.py
.github/workflows/: ci.yml
src/avm/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  models.py
src/avm/adapters/: __init__.py  base.py  claude_code.py  codex.py  factory.py  hermes.py
src/avm/commands/: __init__.py  approve.py  backup.py  checkpoint.py  config.py  doctor.py  document.py  hook.py  init_project.py  install.py  launch.py  pr.py  preflight.py  publish.py  recovery.py  report.py  review.py  start.py  status.py  update.py  validate.py
src/avm/core/: __init__.py  approval.py  (+10 more)
tests/: __init__.py
tests/integration/: test_transaction_git.py
tests/unit/: __init__.py  test_adapters.py  test_approval.py  test_approve.py  test_backup.py  test_backup_cmd.py  test_classifier.py  test_cli.py  test_config.py  test_config_cmd.py  test_doctor.py  test_document_cmd.py  test_git_ops.py  test_git_ops_ext.py  test_github_client.py  test_hashing.py  test_hook_cmd.py  test_init_project.py  test_install_cmd.py  test_installer.py  test_io.py  test_launch_cmd.py  test_locking.py  test_logging.py  test_main.py  test_models.py  test_paths.py  test_pr_cmd.py  test_preflight_cmd.py  test_publish.py  test_recovery_cmd.py  test_report.py  test_review_cmd.py  test_security_scan.py  test_start.py  test_state_machine.py  test_status_checkpoint.py  test_status_cmd.py  test_validate.py  test_versioning.py  (+1 more)
版本管理/: .gitignore  README.md  approvals.json  当前任务.json  版本索引.json  配置.yaml
(+7 files in other folders)
